--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <div class="video__iframes">
-            <iframe class='video__iframe' width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" 
-              title="YouTube video player" frameborder="0" allow="accelerometer; 
+            <iframe class='video__iframe' src="https://www.youtube.com/embed/arj7oStGLkU" 
+              title="YouTube video player" allow="accelerometer; 
               autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
-            <iframe class='video__iframe' width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" 
-              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+            <iframe class='video__iframe' src="https://www.youtube.com/embed/5MgBikgcWnY" 
+              title="YouTube video player" allow="accelerometer; autoplay; 
               clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
           </div>
         </section>
 
         <section class="oakley">
-          <article  class="two-columns">
+          <article  class="two-columns" aria-label="История Барбары Стрейзанд">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
