--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <main class="main">
         <section class="description" aria-label="Главные проблемы в обучении">
-          <article  class="two-columns">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -59,60 +59,107 @@
           <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
           <ul class="cards">
             <li class="cards__item">
-              <img src="images/blocks/cards/cards-attention.png" alt="Книга Брианы Уэйст '101 эссе, которые изменят 
-              ваше мировоззрение'" class="cards__image">
+              <img
+                src="images/blocks/cards/cards-attention.png"
+                alt="Книга Брианы Уэйст '101 эссе, которые изменят 
+              ваше мировоззрение'"
+                class="cards__image"
+              />
               <h4 class="cards__title">Два вида внимания</h4>
-              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+              <p class="cards__description">
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
             </li>
             <li class="cards__item">
-              <img src="images/blocks/cards/cards-recall.png" alt="Воспоминания" class="cards__image">
+              <img
+                src="images/blocks/cards/cards-recall.png"
+                alt="Воспоминания"
+                class="cards__image"
+              />
               <h4 class="cards__title">Recall</h4>
-              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+              <p class="cards__description">
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
             </li>
             <li class="cards__item">
-              <img src="images/blocks/cards/cards-interliving.png" alt="Интерливинг" class="cards__image">
+              <img
+                src="images/blocks/cards/cards-interliving.png"
+                alt="Интерливинг"
+                class="cards__image"
+              />
               <h4 class="cards__title">Интерливинг</h4>
-              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              <p class="cards__description">
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
             </li>
             <li class="cards__item">
-              <img src="images/blocks/cards/cards-question.png" alt="Вопросы" class="cards__image">
+              <img
+                src="images/blocks/cards/cards-question.png"
+                alt="Вопросы"
+                class="cards__image"
+              />
               <h4 class="cards__title">Вопросы</h4>
-              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+              <p class="cards__description">
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
             </li>
             <li class="cards__item">
-              <img src="images/blocks/cards/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
+              <img
+                src="images/blocks/cards/cards-competence.png"
+                alt="Иллюзия компетентности"
+                class="cards__image"
+              />
               <h4 class="cards__title">Иллюзия компетентности</h4>
-              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+              <p class="cards__description">
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
             </li>
-          
           </ul>
         </section>
-          
+
         <section class="video">
           <h2 class="section-title">Видео на TED</h2>
           <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
           <div class="video__iframes">
-            <iframe class='video__iframe' src="https://www.youtube.com/embed/arj7oStGLkU" 
-              title="YouTube video player" allow="accelerometer; 
-              autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="YouTube video player"
+              allow="accelerometer; 
+              autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
             </iframe>
-            <iframe class='video__iframe' src="https://www.youtube.com/embed/5MgBikgcWnY" 
-              title="YouTube video player" allow="accelerometer; autoplay; 
-              clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube video player"
+              allow="accelerometer; autoplay; 
+              clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
             </iframe>
           </div>
         </section>
 
         <section class="oakley">
-          <article  class="two-columns" aria-label="История Барбары Стрейзанд">
+          <article class="two-columns" aria-label="История Барбары Стрейзанд">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. 
-                В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. 
-                Но для продвижения по службе нужно было сдавать математику. 
-                И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые 
-                трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
               </p>
             </div>
           </article>
@@ -136,8 +183,9 @@
               <td class="table__cell">
                 <h4 class="table__heading">2.1 миллиарда</h4>
                 <p class="table__text">
-                  Число нуждающихся в повышении квалификации<p class="table__text">Всемирный Банк, 2017</p>
+                  Число нуждающихся в повышении квалификации
                 </p>
+                <p class="table__text">Всемирный Банк, 2017</p>
               </td>
               <td class="table__cell">
                 <h4 class="table__heading">1000 терабайт</h4>
@@ -180,13 +228,23 @@
           <div class="khan__container">
             <cite class="khan__author">Салман Хан</cite>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
-              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить 
-              навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+            <blockquote class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </blockquote>
             <cite class="khan__quote-author">Джордж Лукас</cite>
-            <cite class="khan__quote-author-subline">Кинорежиссер, продюсер</cite>
+            <cite class="khan__quote-author-subline"
+              >Кинорежиссер, продюсер</cite
+            >
             <div class="khan__book-container">
-              <img src="images/blocks/khan/__book-pic/khan-book.jpg" alt="Книга Хана 'Весь мир - школа'" class="khan__book-pic">
+              <img
+                src="images/blocks/khan/__book-pic/khan-book.jpg"
+                alt="Книга Хана 'Весь мир - школа'"
+                class="khan__book-pic"
+              />
               <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
             </div>
           </div>
@@ -270,23 +328,40 @@
 
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
-          <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+          <h3 class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </h3>
           <div class="resources__logo-zone">
             <a href="#" class="resources__link">
-              <img src="images/blocks/resources/__logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+              <img
+                src="images/blocks/resources/__logo/resources-arzamas.svg"
+                alt="Арзамас"
+                class="resources__logo"
+              />
             </a>
             <a href="#" class="resources__link">
-              <img src="images/blocks/resources/__logo/resources-n1.svg" alt="Н1" class="resources__logo">
+              <img
+                src="images/blocks/resources/__logo/resources-n1.svg"
+                alt="Н1"
+                class="resources__logo"
+              />
             </a>
             <a href="#" class="resources__link">
-              <img src="images/blocks/resources/__logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
+              <img
+                src="images/blocks/resources/__logo/resources-strelka.svg"
+                alt="Стрелка"
+                class="resources__logo"
+              />
             </a>
             <a href="#" class="resources__link">
-              <img src="images/blocks/resources/__logo/resources-polka.svg" alt="Полка" class="resources__logo">
+              <img
+                src="images/blocks/resources/__logo/resources-polka.svg"
+                alt="Полка"
+                class="resources__logo"
+              />
             </a>
           </div>
         </section>
-
       </main>
       <footer class="footer">
         <div class="footer__columns">
@@ -311,29 +386,29 @@
             <nav class="footer__column-links">
               <a href="" class="footer__column-link">
                 <img
-                src="images/blocks/footer/__social-icon/youtube-icon.svg"
-                alt="иконка ютуб"
-                class="footer__social-icon"
+                  src="images/blocks/footer/__social-icon/youtube-icon.svg"
+                  alt="иконка ютуб"
+                  class="footer__social-icon"
                 />
                 Youtube
               </a>
               <a href="" class="footer__column-link">
                 <img
-                src="images/blocks/footer/__social-icon/vk_color_white.svg"
-                alt="иконка Вконтакте "
-                class="footer__social-icon"
+                  src="images/blocks/footer/__social-icon/vk_color_white.svg"
+                  alt="иконка Вконтакте "
+                  class="footer__social-icon"
                 />
                 ВКонтакте
               </a>
               <a href="" class="footer__column-link">
                 <img
-                src="images/blocks/footer/__social-icon/tiktok-icon.svg"
-                alt="иконка Тиктока"
-                class="footer__social-icon"
+                  src="images/blocks/footer/__social-icon/tiktok-icon.svg"
+                  alt="иконка Тиктока"
+                  class="footer__social-icon"
                 />
                 TikTok
-            </a>
-          </nav>
+              </a>
+            </nav>
           </div>
         </div>
       </footer>
