--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="pages/index.css" />
   </head>
-  <body class="body">
+  <body class="root">
     <div class="page">
       <header class="header">
         <img
@@ -25,7 +25,7 @@
           alt="картина 'Опять Двойка'"
           class="header__main-illustration"
         />
-        <div class="header__square-pic header__square-pic_state_animated"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
 
       <main class="main">
@@ -323,7 +323,7 @@
               </td>
             </tr>
           </table>
-          <div class="kaufman__triangle kaufman__triangle-state-animated"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
 
         <section class="resources">
@@ -376,9 +376,9 @@
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
             <nav class="footer__column-links">
-              <a href="" class="footer__column-link">Главная</a>
-              <a href="" class="footer__column-link">Концепция</a>
-              <a href="" class="footer__column-link">Наставники</a>
+              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link">Наставники</a>
             </nav>
           </div>
           <div class="footer__column footer__column_content_social">
