--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <header class="header">
         <img
-          src="images/blocks/logo/_place/logo_place_header.svg"
+          src="./images/blocks/logo/_place/logo_place_header.svg"
           alt="логотип Яндекс Практикум"
           class="logo logo_place_header"
         />
