внес правки в пути

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#" class="header__link">Узнать &rarr;</a>
         </p>
         <img
-          src="images/blocks/header/header-image.png"
+          src="./images/blocks/header/header-image.png"
           alt="картина 'Опять Двойка'"
           class="header__main-illustration"
         />
@@ -60,7 +60,7 @@
           <ul class="cards">
             <li class="cards__item">
               <img
-                src="images/blocks/cards/cards-attention.png"
+                src="./images/blocks/cards/cards-attention.png"
                 alt="Книга Брианы Уэйст '101 эссе, которые изменят 
               ваше мировоззрение'"
                 class="cards__image"
@@ -73,7 +73,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="images/blocks/cards/cards-recall.png"
+                src="./images/blocks/cards/cards-recall.png"
                 alt="Воспоминания"
                 class="cards__image"
               />
@@ -85,7 +85,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="images/blocks/cards/cards-interliving.png"
+                src="./images/blocks/cards/cards-interliving.png"
                 alt="Интерливинг"
                 class="cards__image"
               />
@@ -97,7 +97,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="images/blocks/cards/cards-question.png"
+                src="./images/blocks/cards/cards-question.png"
                 alt="Вопросы"
                 class="cards__image"
               />
@@ -109,7 +109,7 @@
             </li>
             <li class="cards__item">
               <img
-                src="images/blocks/cards/cards-competence.png"
+                src="./images/blocks/cards/cards-competence.png"
                 alt="Иллюзия компетентности"
                 class="cards__image"
               />
@@ -168,7 +168,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-          <a href="" class="feynman__link">Подробнее &rarr;</a>
+          <a href="#" class="feynman__link">Подробнее &rarr;</a>
         </section>
 
         <section class="digits">
@@ -241,7 +241,7 @@
             >
             <div class="khan__book-container">
               <img
-                src="images/blocks/khan/__book-pic/khan-book.jpg"
+                src="./images/blocks/khan/__book-pic/khan-book.jpg"
                 alt="Книга Хана 'Весь мир - школа'"
                 class="khan__book-pic"
               />
@@ -334,28 +334,28 @@
           <div class="resources__logo-zone">
             <a href="#" class="resources__link">
               <img
-                src="images/blocks/resources/__logo/resources-arzamas.svg"
+                src="./images/blocks/resources/__logo/resources-arzamas.svg"
                 alt="Арзамас"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="images/blocks/resources/__logo/resources-n1.svg"
+                src="./images/blocks/resources/__logo/resources-n1.svg"
                 alt="Н1"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="images/blocks/resources/__logo/resources-strelka.svg"
+                src="./images/blocks/resources/__logo/resources-strelka.svg"
                 alt="Стрелка"
                 class="resources__logo"
               />
             </a>
             <a href="#" class="resources__link">
               <img
-                src="images/blocks/resources/__logo/resources-polka.svg"
+                src="./images/blocks/resources/__logo/resources-polka.svg"
                 alt="Полка"
                 class="resources__logo"
               />
@@ -367,7 +367,7 @@
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
             <img
-              src="images/blocks/logo/_place/logo_place_footer.svg"
+              src="./images/blocks/logo/_place/logo_place_footer.svg"
               alt="логотип Яндекс Парктикум"
               class="logo logo_place_footer"
             />
@@ -384,25 +384,25 @@
           <div class="footer__column footer__column_content_social">
             <h2 class="footer__column-heading">Соцсети</h2>
             <nav class="footer__column-links">
-              <a href="" class="footer__column-link">
+              <a href="#" class="footer__column-link">
                 <img
-                  src="images/blocks/footer/__social-icon/youtube-icon.svg"
+                  src="./images/blocks/footer/__social-icon/youtube-icon.svg"
                   alt="иконка ютуб"
                   class="footer__social-icon"
                 />
                 Youtube
               </a>
-              <a href="" class="footer__column-link">
+              <a href="#" class="footer__column-link">
                 <img
-                  src="images/blocks/footer/__social-icon/vk_color_white.svg"
+                  src="./images/blocks/footer/__social-icon/vk_color_white.svg"
                   alt="иконка Вконтакте "
                   class="footer__social-icon"
                 />
                 ВКонтакте
               </a>
-              <a href="" class="footer__column-link">
+              <a href="#" class="footer__column-link">
                 <img
-                  src="images/blocks/footer/__social-icon/tiktok-icon.svg"
+                  src="./images/blocks/footer/__social-icon/tiktok-icon.svg"
                   alt="иконка Тиктока"
                   class="footer__social-icon"
                 />
